Deployments/hello-world/010-Namespace.yaml
# Namespace.yaml sssd
apiVersion: v1
kind: Namespace
metadata:
  name: helloworld
  labels:
    cert-manager-tls: nekomade-com
