Deployments/hello-world/050-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  namespace: helloworld
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hello.nekomade.com
    external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hello-kubernetes
