Deployments/hello-world/060-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
  namespace: helloworld
  annotations:
    cert-manager.io/issuer: prod-issuer # required
    cert-manager.io/issuer-kind: OriginIssuer # Required
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com # Required
spec:
  tls:
    - hosts:
        - hello.nekomade.com
      secretName: helloworld-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes
                port:
                  number: 80
